reticula-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: materias
  labels:
    app: reticula-api
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 31000
    protocol: TCP
  selector:
    app: reticula-api
