ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reticulaapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "app.eramirez.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reticulaapp-svc
            port:
              number: 80
